HACO Updated and Objective Function Fixed.